Added outgoing response and incoming request logging